--- a/inner.html
+++ b/inner.html
@@ -44,19 +44,18 @@
                                             <div class="bottom">
                                                 <span class="price">€33.95</span>
                                                 <div class="change">
-
                                                     <form>
-                                                        <input type="radio" name="color" id="red" value="red" />
-                                                        <label for="red"><span class="red"></span></label>
+                                                        <input type="radio" name="color" id="color1" value="color1" />
+                                                        <label for="color1"><span class="color1"></span></label>
 
-                                                        <input type="radio" name="color" id="green" />
-                                                        <label for="green"><span class="green"></span></label>
+                                                        <input type="radio" name="color" id="color2" />
+                                                        <label for="color2"><span class="color2"></span></label>
 
-                                                        <input type="radio" name="color" id="yellow" />
-                                                        <label for="yellow"><span class="yellow"></span></label>
+                                                        <input type="radio" name="color" id="color3" />
+                                                        <label for="color3"><span class="color3"></span></label>
 
-                                                        <input type="radio" name="color" id="olive" />
-                                                        <label for="olive"><span class="olive"></span></label>
+                                                        <input type="radio" name="color" id="color4" />
+                                                        <label for="color4"><span class="color4"></span></label>
                                                     </form>
                                                 </div>
                                             </div>
@@ -72,17 +71,17 @@
                                                 <span class="price">€33.95</span>
                                                 <div class="change">
                                                     <form>
-                                                        <input type="radio" name="color" id="red" value="red" />
-                                                        <label for="red"><span class="red"></span></label>
+                                                        <input type="radio" name="color" id="color1" value="color1" />
+                                                        <label for="color1"><span class="color1"></span></label>
 
-                                                        <input type="radio" name="color" id="green" />
-                                                        <label for="green"><span class="green"></span></label>
+                                                        <input type="radio" name="color" id="color2" />
+                                                        <label for="color2"><span class="color2"></span></label>
 
-                                                        <input type="radio" name="color" id="yellow" />
-                                                        <label for="yellow"><span class="yellow"></span></label>
+                                                        <input type="radio" name="color" id="color3" />
+                                                        <label for="color3"><span class="color3"></span></label>
 
-                                                        <input type="radio" name="color" id="olive" />
-                                                        <label for="olive"><span class="olive"></span></label>
+                                                        <input type="radio" name="color" id="color4" />
+                                                        <label for="color4"><span class="color4"></span></label>
                                                     </form>
                                                 </div>
                                             </div>
@@ -98,29 +97,24 @@
                                                 <span class="price">€33.95</span>
                                                 <div class="change">
                                                     <form>
-                                                        <input type="radio" name="color" id="red" value="red" />
-                                                        <label for="red"><span class="red"></span></label>
+                                                        <input type="radio" name="color" id="color1" value="color1" />
+                                                        <label for="color1"><span class="color1"></span></label>
 
-                                                        <input type="radio" name="color" id="green" />
-                                                        <label for="green"><span class="green"></span></label>
+                                                        <input type="radio" name="color" id="color2" />
+                                                        <label for="color2"><span class="color2"></span></label>
 
-                                                        <input type="radio" name="color" id="yellow" />
-                                                        <label for="yellow"><span class="yellow"></span></label>
+                                                        <input type="radio" name="color" id="color3" />
+                                                        <label for="color3"><span class="color3"></span></label>
 
-                                                        <input type="radio" name="color" id="olive" />
-                                                        <label for="olive"><span class="olive"></span></label>
+                                                        <input type="radio" name="color" id="color4" />
+                                                        <label for="color4"><span class="color4"></span></label>
                                                     </form>
                                                 </div>
                                             </div>
                                         </div>
-
                                     </div>
-
                                 </div>
-
-
                             </div>
-
                         </div>
                         <div class="swiper-button-next"></div>
                     </div>
