--- a/inner.html
+++ b/inner.html
@@ -255,7 +255,7 @@
 
 
         </section>
-        <footer class="d-lg-none d-block">
+        <footer>
             <div class="row">
                 <div class="col-lg-3 col-md-3">
                     <div class="accordion">
